fixed sub navi items being broken in safari on ios and dark mode

--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.scss
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.scss
@@ -8,7 +8,7 @@
 
 
     a {
-      font-size: 90%;
+      font-size: 14.4px;
       font-weight: bold;
       letter-spacing: -1px;
       line-height: 32px;
@@ -19,6 +19,9 @@
       align-items: center;
       width: 100%;
       overflow: hidden;
+
+      /* required for safari to cut rounded borders */
+      -webkit-mask-image: -webkit-radial-gradient(white, black);
 
 
       .icon {
@@ -32,6 +35,7 @@
         flex-basis: calc(100% - 48px - 0.5rem);
         display: flex;
         justify-content: space-between;
+        height: 32px;
 
         &:before {
           background-color: #46504f;
@@ -86,7 +90,12 @@
         background: #212121;
         color: rgba(255, 255, 255, 0.8);
       }
+
+      .content.no-meta:before {
+        background-color: #212121;
+      }
     }
   }
+
 }
 
